style_sheet.css
body {
	margin: 0;
	font-family: Verdana, Geneva, Tahoma, sans-serif;
	background-color: #252323
}

header ul {
	list-style-type: none;
	margin: 0;
	padding: 0;
	background-color: #353535;
	display: flex;
}

header ul li a {
	display: block;
	padding: 30px 30px;
	text-decoration: none;
}

#navbar ul li:hover:not(.name) {
	border: 0;
  	background-color: #2a1e30;
}

header ul li h3 {
	display: block;
	padding: 30px 30px;
	margin: 0;
	text-decoration: none;
}

td {
  	padding: 8px;
}

tr:nth-child(even) {
  	background-color: #353535;
}

td img{
    display: block;
    margin-left: auto;
    margin-right: auto;
}

footer {
	margin: 0;
	padding: 5px 30px;
	background-color: #353535;
}

footer p {
	display: block;
	color: white;
	text-decoration: none;
}

.wrapper {
	display: grid;
	grid-template-rows: auto 1fr auto;
	min-height: 100vh;
}

h1 {
	margin: auto;
	margin-top: 20;
	margin-bottom: 20;
}

p, a, h1, h2, h3, h4, h5, h6, tr {
	color: rgb(255, 253, 250);
}

table {
	width: 90%;
	margin: auto;
	margin-bottom: 20;
}

.img-box {
	display: flex;
	margin: auto;
	border-radius: 10px;
	border: 5px solid #353535;
	margin-bottom: 50px;
	margin-top: 50px;
}

.img-box div{
	border: 10px solid #353535;
}

.img-box div img {
	height: 30vw;
}

.degree {
	margin: auto;
	margin-top: 50px;
	border-radius: 10px;
	border: 10px solid #353535;
	background-color: #353535;
}

.degree h5 {
	margin: 10;
}

.main {
	width: 80%;
	margin: auto;
}

p {
    text-indent: 40px;
}

